# ch_project

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
ch_customers/: .env_sample  config.py
ch_customers/ch/: celery.py  settings.py  urls.py
ch_customers/companies/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
ch_customers/users/: models.py  serializers.py  urls.py  views.py
